--- a/4-point.tex
+++ b/4-point.tex
@@ -159,12 +159,12 @@ Hence, the result.
 \qeds
 
 \begin{thm}{Proposition}\label{prop:Associated form}
-Let $K$ be a closed convex cone in $W_n$ such that $K=K'$.
-If $K$ is nontrivial (that is, $K\ne \{0\}$), then $\mathcal{M}_K$ contains all Euclidean spaces.
+Let $K$ be a closed convex cone in $W_n$.
+If $\mathcal{M}_K$ is not trivial (that is, it contains a space with at least two points), then $\mathcal{M}_K$ contains all Euclidean spaces.
 \end{thm}
 
 \parit{Proof.}
-Since $K$ is nontrivial, $\mathcal{M}_K$ contains a space, say $X$, with two distinct points.
+Let $X$ be a space in $\mathcal{M}_K$ with two distinct points.
 Consider the ultracompletion $X^\omega$ of $X$;
 the space $X$ will be considered as a subset of $X^\omega$.
 Since $K$ is closed, the observation implies that $X^\omega\in \mathcal{M}_K$.
