--- a/paper-en.sty
+++ b/paper-en.sty
@@ -36,7 +36,7 @@ isbn=false]{biblatex}
 \AtEveryBibitem{\clearlist{language}}
 \AtEveryBibitem{\clearlist{note}}
 \renewbibmacro{in:}{}
-\renewcommand*{\bibfont}{\scriptsize}
+%\renewcommand*{\bibfont}{\scriptsize}
 \addbibresource{library.bib}
 
 
@@ -47,7 +47,7 @@ isbn=false]{biblatex}
 %removes p. in the cites
 
 \usepackage{accsupp}
-\usepackage{soulutf8}
+\usepackage{soul}
 \sodef\an{}{.1em}{.5em plus.1em}{.5em plus.1em minus.1em}
 
 \newcommand\ann[1]{%
